# LambdaRust-coq

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile.coq.local  Missing.md  README.md  _CoqProject  coq-lambda-rust.opam  coq-lint.sh  opam
theories/lang/: adequacy.v  heap.v  lang.v  lifting.v  notation.v  proofmode.v  races.v  tactics.v
theories/lang/lib/: arc.v  lock.v  memcpy.v  new_delete.v  spawn.v  swap.v  tests.v
theories/lifetime/: at_borrow.v  frac_borrow.v  lifetime.v  lifetime_sig.v  meta.v  na_borrow.v
theories/lifetime/model/: accessors.v  borrow.v  borrow_sep.v  creation.v  definitions.v  faking.v  primitive.v  reborrow.v
theories/typing/: base.v  bool.v  borrow.v  cont.v  cont_context.v  fixpoint.v  function.v  int.v  lft_contexts.v  own.v  product.v  product_split.v  programs.v  shr_bor.v  soundness.v  sum.v  type.v  type_context.v  type_sum.v  typing.v  uninit.v  uniq_bor.v  util.v
theories/typing/examples/: diverging_static.v  get_x.v  init_prod.v  lazy_lft.v  nonlexical.v  rebor.v  unbox.v
theories/typing/lib/: arc.v  brandedvec.v  cell.v  diverging_static.v  fake_shared.v  ghostcell.v  join.v  option.v  panic.v  spawn.v  swap.v  take_mut.v
theories/typing/lib/mutex/: mutex.v  mutexguard.v
theories/typing/lib/rc/: rc.v  weak.v
theories/typing/lib/refcell/: ref.v  ref_code.v  refcell.v  refcell_code.v  refmut.v  refmut_code.v
theories/typing/lib/rwlock/: rwlock.v  rwlock_code.v  rwlockreadguard.v  rwlockreadguard_code.v  rwlockwriteguard.v  rwlockwriteguard_code.v
